--- a/tools/debian/rules
+++ b/tools/debian/rules
@@ -7,12 +7,17 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
+ARCH=$(shell dpkg-architecture -qDEB_HOST_ARCH)
+
+ifeq ($(ARCH),armhf)
+	ARM=-DBUILD_GL=OFF -DBUILD_GLES2=ON
+endif
 
 %:
 	dh $@ --buildsystem=cmake --builddirectory=obj --parallel
 
 override_dh_auto_configure:
-	dh_auto_configure -- -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_SKIP_RPATH=ON -DBUILD_LIBRETRO=ON
+	dh_auto_configure -- -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_SKIP_RPATH=ON -DBUILD_LIBRETRO=ON $(ARM)
 	sed 's/@DEB_HOST_MULTIARCH@/$(DEB_HOST_MULTIARCH)/g' \
 		debian/libretro-mgba.install.in > debian/libretro-mgba.install
 	sed 's/@DEB_HOST_MULTIARCH@/$(DEB_HOST_MULTIARCH)/g' \
