--- a/libretro-build/Makefile.android_arm64-v8a
+++ b/libretro-build/Makefile.android_arm64-v8a
@@ -2,12 +2,6 @@
 # Works on hosts Linux, Windows and Darwin
 # Download the Android NDK, unpack somewhere, and set NDK_ROOT_DIR to it
 
-#############
-# User config
-
-DEBUG = 0
-LOG_PERFORMANCE = 1
-
 ##########################
 # Checks the host platform
 
@@ -26,13 +20,11 @@ endif
 ####################################
 # Variable setup for Makefile.common
 
-CORE_DIR  ?= ../src
+CORE_DIR  ?= ..
 BUILD_DIR ?= .
 INCLUDES   = -I$(NDK_ROOT_DIR)/platforms/android-21/arch-arm64/usr/include -I$(NDK_ROOT_DIR)/sources/cxx-stl/gnu-libstdc++/4.9/include -I$(NDK_ROOT_DIR)/sources/cxx-stl/gnu-libstdc++/4.9/libs/arm64-v8a/include -I$(NDK_ROOT_DIR)/sources/cxx-stl/gnu-libstdc++/4.9/include/backward
 
 include $(BUILD_DIR)/Makefile.common
-
-INCLUDES += $(INCFLAGS)
 
 #################
 # Toolchain setup
@@ -45,8 +37,8 @@ AR  = $(NDK_ROOT_DIR)/toolchains/aarch64-linux-android-4.9/prebuilt/$(HOST_PLATF
 ############
 # Extensions
 
-OBJEXT = .android-arm64_v8a.o
-SOEXT  = .android-arm64_v8a.so
+OBJEXT = .android_arm64-v8a.o
+SOEXT  = .android_arm64-v8a.so
 
 ################
 # Platform setup
@@ -62,7 +54,7 @@ PLATLDXFLAGS   = -shared --sysroot=$(NDK_ROOT_DIR)/platforms/android-21/arch-arm
 ################
 # libretro setup
 
-RETRODEFS     += -D__LIBRETRO__ -DHAVE_LOCALE
+RETRODEFS     = -D__LIBRETRO__
 RETROCFLAGS   =
 RETROCXXFLAGS =
 RETROLDFLAGS  =
@@ -80,17 +72,15 @@ LDXFLAGS = $(PLATLDXFLAGS) $(RETROLDXFLAGS)
 ########
 # Tuning
 
-ifeq ($(DEBUG), 1)
+ifneq ($(DEBUG),)
   CFLAGS   += -O0 -g
   CXXFLAGS += -O0 -g
-  LDFLAGS  += -g
-  LDXFLAGS += -g
 else
   CFLAGS   += -O3 -DNDEBUG
   CXXFLAGS += -O3 -DNDEBUG
 endif
 
-ifeq ($(LOG_PERFORMANCE), 1)
+ifneq ($(LOG_PERFORMANCE),)
   CFLAGS   += -DLOG_PERFORMANCE
   CXXFLAGS += -DLOG_PERFORMANCE
 endif
