--- a/libretro-build/Makefile.linux-portable_x86
+++ b/libretro-build/Makefile.linux-portable_x86
@@ -1,12 +1,6 @@
 ##############
 # Works on hosts Linux
-# apt-get install mingw-w64
-
-#############
-# User config
-
-DEBUG = 0
-LOG_PERFORMANCE = 1
+# apt-get install g++-multilib libc6-dev-i386
 
 ##########################
 # Checks the host platform
@@ -35,27 +29,27 @@ include $(BUILD_DIR)/Makefile.common
 #################
 # Toolchain setup
 
-CC  = x86_64-w64-mingw32-gcc
-CXX = x86_64-w64-mingw32-g++
-AS  = x86_64-w64-mingw32-as
-AR  = x86_64-w64-mingw32-ar
+CC  = gcc
+CXX = g++
+AS  = as
+AR  = ar
 
 ############
 # Extensions
 
-OBJEXT = .windows_x86_64.o
-SOEXT  = .windows_x86_64.dll
+OBJEXT = .linux-portable_x86.o
+SOEXT  = .linux-portable_x86.so
 
 ################
 # Platform setup
 
 STATIC_LINKING = 0
-platform       = win
+platform       = unix
 PLATDEFS       = 
-PLATCFLAGS     = -fpic -fstrict-aliasing
-PLATCXXFLAGS   = -fpic -fstrict-aliasing
-PLATLDFLAGS    = -shared -lm
-PLATLDXFLAGS   = -shared -lm
+PLATCFLAGS     = -m32 -fpic -fstrict-aliasing
+PLATCXXFLAGS   = -m32 -fpic -fstrict-aliasing
+PLATLDFLAGS    = -m32 -shared -lm -Wl,-version-script=$(BUILD_DIR)/link.T
+PLATLDXFLAGS   = -m32 -shared -lm -Wl,-version-script=$(BUILD_DIR)/link.T
 
 ################
 # libretro setup
@@ -78,17 +72,15 @@ LDXFLAGS = $(PLATLDXFLAGS) $(RETROLDXFLAGS)
 ########
 # Tuning
 
-ifeq ($(DEBUG), 1)
+ifneq ($(DEBUG),)
   CFLAGS   += -O0 -g
   CXXFLAGS += -O0 -g
-  LDFLAGS  += -g
-  LDXFLAGS += -g
 else
   CFLAGS   += -O3 -DNDEBUG
   CXXFLAGS += -O3 -DNDEBUG
 endif
 
-ifeq ($(LOG_PERFORMANCE), 1)
+ifneq ($(LOG_PERFORMANCE),)
   CFLAGS   += -DLOG_PERFORMANCE
   CXXFLAGS += -DLOG_PERFORMANCE
 endif
