--- a/libretro-build/Makefile.windows_x86
+++ b/libretro-build/Makefile.windows_x86
@@ -1,12 +1,6 @@
 ##############
 # Works on hosts Linux
-# 
-
-#############
-# User config
-
-DEBUG = 0
-LOG_PERFORMANCE = 1
+# apt-get install mingw-w64
 
 ##########################
 # Checks the host platform
@@ -35,27 +29,27 @@ include $(BUILD_DIR)/Makefile.common
 #################
 # Toolchain setup
 
-CC  = gcc
-CXX = g++
-AS  = as
-AR  = ar
+CC  = i686-w64-mingw32-gcc
+CXX = i686-w64-mingw32-g++
+AS  = i686-w64-mingw32-as
+AR  = i686-w64-mingw32-ar
 
 ############
 # Extensions
 
-OBJEXT = .linux_x86_64.o
-SOEXT  = .linux_x86_64.so
+OBJEXT = .windows_x86.o
+SOEXT  = .windows_x86.dll
 
 ################
 # Platform setup
 
 STATIC_LINKING = 0
-platform       = unix
+platform       = win
 PLATDEFS       = 
-PLATCFLAGS     = -m64 -fpic -fstrict-aliasing
-PLATCXXFLAGS   = -m64 -fpic -fstrict-aliasing
-PLATLDFLAGS    = -m64 -shared -lm -Wl,-version-script=$(BUILD_DIR)/link.T
-PLATLDXFLAGS   = -m64 -shared -lm -Wl,-version-script=$(BUILD_DIR)/link.T
+PLATCFLAGS     = -fstrict-aliasing
+PLATCXXFLAGS   = -fstrict-aliasing
+PLATLDFLAGS    = -shared -lm
+PLATLDXFLAGS   = -shared -lm
 
 ################
 # libretro setup
@@ -78,17 +72,15 @@ LDXFLAGS = $(PLATLDXFLAGS) $(RETROLDXFLAGS)
 ########
 # Tuning
 
-ifeq ($(DEBUG), 1)
+ifneq ($(DEBUG),)
   CFLAGS   += -O0 -g
   CXXFLAGS += -O0 -g
-  LDFLAGS  += -g
-  LDXFLAGS += -g
 else
   CFLAGS   += -O3 -DNDEBUG
   CXXFLAGS += -O3 -DNDEBUG
 endif
 
-ifeq ($(LOG_PERFORMANCE), 1)
+ifneq ($(LOG_PERFORMANCE),)
   CFLAGS   += -DLOG_PERFORMANCE
   CXXFLAGS += -DLOG_PERFORMANCE
 endif
