--- a/libretro-build/Makefile.windows_x86_64
+++ b/libretro-build/Makefile.windows_x86_64
@@ -1,12 +1,6 @@
 ##############
-# Works on hosts Windows
-# Install MSYS2
-
-#############
-# User config
-
-DEBUG = 0
-LOG_PERFORMANCE = 1
+# Works on hosts Linux
+# apt-get install mingw-w64
 
 ##########################
 # Checks the host platform
@@ -35,16 +29,16 @@ include $(BUILD_DIR)/Makefile.common
 #################
 # Toolchain setup
 
-CC  = gcc
-CXX = g++
-AS  = as
-AR  = ar
+CC  = x86_64-w64-mingw32-gcc
+CXX = x86_64-w64-mingw32-g++
+AS  = x86_64-w64-mingw32-as
+AR  = x86_64-w64-mingw32-ar
 
 ############
 # Extensions
 
-OBJEXT = .mingw32.o
-SOEXT  = .mingw32.dll
+OBJEXT = .windows_x86_64.o
+SOEXT  = .windows_x86_64.dll
 
 ################
 # Platform setup
@@ -52,10 +46,10 @@ SOEXT  = .mingw32.dll
 STATIC_LINKING = 0
 platform       = win
 PLATDEFS       = 
-PLATCFLAGS     = -m32 -fpic -fstrict-aliasing
-PLATCXXFLAGS   = -m32 -fpic -fstrict-aliasing
-PLATLDFLAGS    = -m32 -shared -lm
-PLATLDXFLAGS   = -m32 -shared -lm
+PLATCFLAGS     = -fpic -fstrict-aliasing
+PLATCXXFLAGS   = -fpic -fstrict-aliasing
+PLATLDFLAGS    = -shared -lm
+PLATLDXFLAGS   = -shared -lm
 
 ################
 # libretro setup
@@ -78,17 +72,15 @@ LDXFLAGS = $(PLATLDXFLAGS) $(RETROLDXFLAGS)
 ########
 # Tuning
 
-ifeq ($(DEBUG), 1)
+ifneq ($(DEBUG),)
   CFLAGS   += -O0 -g
   CXXFLAGS += -O0 -g
-  LDFLAGS  += -g
-  LDXFLAGS += -g
 else
   CFLAGS   += -O3 -DNDEBUG
   CXXFLAGS += -O3 -DNDEBUG
 endif
 
-ifeq ($(LOG_PERFORMANCE), 1)
+ifneq ($(LOG_PERFORMANCE),)
   CFLAGS   += -DLOG_PERFORMANCE
   CXXFLAGS += -DLOG_PERFORMANCE
 endif
