--- a/libretro-build/Makefile.common
+++ b/libretro-build/Makefile.common
@@ -1,57 +1,57 @@
-INCFLAGS     := -I$(CORE_DIR) -I$(CORE_DIR)/arm
-RETRODEFS := -DHAVE_STDINT_H -DHAVE_INTTYPES_H -DINLINE=inline -DCOLOR_16_BIT -DCOLOR_5_6_5 -DRESAMPLE_LIBRARY=2 -DM_PI=3.14159265358979323846 -DPATH_MAX=4096 -DBINARY_NAME=\"mgba\" -DPROJECT_VERSION=\"0.2.0\" -DPROJECT_NAME=\"mGBA\" -DSSIZE_MAX=32767
+INCLUDES  += -I$(CORE_DIR)/src -I$(CORE_DIR)/src/arm
+RETRODEFS += -DHAVE_STDINT_H -DHAVE_INTTYPES_H -DINLINE=inline -DCOLOR_16_BIT -DCOLOR_5_6_5 -DRESAMPLE_LIBRARY=2 -DM_PI=3.14159265358979323846 -DPATH_MAX=4096 -DBINARY_NAME=\"mgba\" -DPROJECT_VERSION=\"0.2.0\" -DPROJECT_NAME=\"mGBA\" -DSSIZE_MAX=32767
 
 ifneq ($(HAVE_VFS_FD),1)
 RETRODEFS += -DUSE_VFS_FILE
 endif
 
-SOURCES_C :=   $(CORE_DIR)/arm/arm.c \
-					$(CORE_DIR)/arm/isa-thumb.c \
-					$(CORE_DIR)/arm/isa-arm.c \
-					$(CORE_DIR)/arm/decoder-arm.c \
-					$(CORE_DIR)/arm/decoder-thumb.c \
-					$(CORE_DIR)/arm/decoder.c \
-					$(CORE_DIR)/debugger/debugger.c \
-					$(CORE_DIR)/debugger/memory-debugger.c \
-					$(CORE_DIR)/gba/savedata.c \
-					$(CORE_DIR)/gba/io.c \
-					$(CORE_DIR)/gba/bios.c \
-					$(CORE_DIR)/gba/hle-bios.c \
-					$(CORE_DIR)/gba/input.c \
-					$(CORE_DIR)/gba/audio.c \
-					$(CORE_DIR)/gba/memory.c \
-					$(CORE_DIR)/gba/cheats.c \
-					$(CORE_DIR)/gba/cheats/gameshark.c \
-					$(CORE_DIR)/gba/cheats/parv3.c \
-					$(CORE_DIR)/gba/cheats/codebreaker.c \
-					$(CORE_DIR)/gba/gba.c \
-					$(CORE_DIR)/gba/hardware.c \
-					$(CORE_DIR)/gba/sio.c \
-					$(CORE_DIR)/gba/video.c \
-					$(CORE_DIR)/gba/serialize.c \
-					$(CORE_DIR)/gba/supervisor/overrides.c \
-					$(CORE_DIR)/gba/supervisor/sync.c \
-					$(CORE_DIR)/gba/supervisor/thread.c \
-					$(CORE_DIR)/gba/renderers/software-mode0.c \
-					$(CORE_DIR)/gba/renderers/software-obj.c \
-					$(CORE_DIR)/gba/renderers/software-bg.c \
-					$(CORE_DIR)/gba/renderers/video-software.c \
-					$(CORE_DIR)/platform/libretro/memory.c \
-					$(CORE_DIR)/platform/libretro/libretro.c \
-					$(CORE_DIR)/third-party/inih/ini.c \
-					$(CORE_DIR)/util/formatting.c \
-					$(CORE_DIR)/util/vfs.c \
-					$(CORE_DIR)/util/table.c \
-					$(CORE_DIR)/util/vfs/vfs-mem.c \
-					$(CORE_DIR)/util/string.c \
-					$(CORE_DIR)/util/hash.c \
-					$(CORE_DIR)/util/configuration.c \
-					$(CORE_DIR)/util/circle-buffer.c \
-					$(CORE_DIR)/third-party/blip_buf/blip_buf.c \
-					$(CORE_DIR)/util/crc32.c
+SOURCES_C :=   $(CORE_DIR)/src/arm/arm.c \
+					$(CORE_DIR)/src/arm/isa-thumb.c \
+					$(CORE_DIR)/src/arm/isa-arm.c \
+					$(CORE_DIR)/src/arm/decoder-arm.c \
+					$(CORE_DIR)/src/arm/decoder-thumb.c \
+					$(CORE_DIR)/src/arm/decoder.c \
+					$(CORE_DIR)/src/debugger/debugger.c \
+					$(CORE_DIR)/src/debugger/memory-debugger.c \
+					$(CORE_DIR)/src/gba/savedata.c \
+					$(CORE_DIR)/src/gba/io.c \
+					$(CORE_DIR)/src/gba/bios.c \
+					$(CORE_DIR)/src/gba/hle-bios.c \
+					$(CORE_DIR)/src/gba/input.c \
+					$(CORE_DIR)/src/gba/audio.c \
+					$(CORE_DIR)/src/gba/memory.c \
+					$(CORE_DIR)/src/gba/cheats.c \
+					$(CORE_DIR)/src/gba/cheats/gameshark.c \
+					$(CORE_DIR)/src/gba/cheats/parv3.c \
+					$(CORE_DIR)/src/gba/cheats/codebreaker.c \
+					$(CORE_DIR)/src/gba/gba.c \
+					$(CORE_DIR)/src/gba/hardware.c \
+					$(CORE_DIR)/src/gba/sio.c \
+					$(CORE_DIR)/src/gba/video.c \
+					$(CORE_DIR)/src/gba/serialize.c \
+					$(CORE_DIR)/src/gba/supervisor/overrides.c \
+					$(CORE_DIR)/src/gba/supervisor/sync.c \
+					$(CORE_DIR)/src/gba/supervisor/thread.c \
+					$(CORE_DIR)/src/gba/renderers/software-mode0.c \
+					$(CORE_DIR)/src/gba/renderers/software-obj.c \
+					$(CORE_DIR)/src/gba/renderers/software-bg.c \
+					$(CORE_DIR)/src/gba/renderers/video-software.c \
+					$(CORE_DIR)/src/platform/libretro/memory.c \
+					$(CORE_DIR)/src/platform/libretro/libretro.c \
+					$(CORE_DIR)/src/third-party/inih/ini.c \
+					$(CORE_DIR)/src/util/formatting.c \
+					$(CORE_DIR)/src/util/vfs.c \
+					$(CORE_DIR)/src/util/table.c \
+					$(CORE_DIR)/src/util/vfs/vfs-mem.c \
+					$(CORE_DIR)/src/util/string.c \
+					$(CORE_DIR)/src/util/hash.c \
+					$(CORE_DIR)/src/util/configuration.c \
+					$(CORE_DIR)/src/util/circle-buffer.c \
+					$(CORE_DIR)/src/third-party/blip_buf/blip_buf.c \
+					$(CORE_DIR)/src/util/crc32.c
 
 ifeq ($(HAVE_VFS_FD),1)
-SOURCES_C += $(CORE_DIR)/util/vfs/vfs-fd.c
+SOURCES_C += $(CORE_DIR)/src/util/vfs/vfs-fd.c
 else
-SOURCES_C += $(CORE_DIR)/util/vfs/vfs-file.c
+SOURCES_C += $(CORE_DIR)/src/util/vfs/vfs-file.c
 endif
