--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -168,6 +168,7 @@ elseif(UNIX)
 	file(GLOB OS_SRC ${CMAKE_SOURCE_DIR}/src/platform/posix/*.c)
 	source_group("POSIX-specific code" FILES ${OS_SRC})
 elseif(3DS)
+	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-format")
 	add_definitions(-DCOLOR_16_BIT -DCOLOR_5_6_5)
 	list(APPEND OS_LIB ctru)
 	file(GLOB OS_SRC ${CMAKE_SOURCE_DIR}/src/platform/3ds/3ds-*.c)
