3DS: Start using sf2dlib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -171,7 +171,7 @@ elseif(UNIX)
 elseif(3DS)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-format")
 	add_definitions(-DCOLOR_16_BIT -DCOLOR_5_6_5)
-	list(APPEND OS_LIB ctru)
+	list(APPEND OS_LIB sf2d ctru)
 	file(GLOB OS_SRC ${CMAKE_SOURCE_DIR}/src/platform/3ds/3ds-*.c)
 	source_group("3DS-specific code" FILES ${OS_SRC})
 endif()
