--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,10 +169,13 @@ elseif(UNIX)
 	file(GLOB OS_SRC ${CMAKE_SOURCE_DIR}/src/platform/posix/*.c)
 	source_group("POSIX-specific code" FILES ${OS_SRC})
 elseif(3DS)
+	set(M_LIBRARY m)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-format")
 	add_definitions(-DCOLOR_16_BIT -DCOLOR_5_6_5)
+	execute_process(COMMAND ${RAW2C} ${CMAKE_SOURCE_DIR}/src/platform/3ds/font.raw)
+	include_directories(${CMAKE_BINARY_DIR})
 	list(APPEND OS_LIB sf2d ctru)
-	file(GLOB OS_SRC ${CMAKE_SOURCE_DIR}/src/platform/3ds/3ds-*.c)
+	file(GLOB OS_SRC ${CMAKE_SOURCE_DIR}/src/platform/3ds/*.c ${CMAKE_BINARY_DIR}/font.c)
 	source_group("3DS-specific code" FILES ${OS_SRC})
 endif()
 
@@ -443,7 +446,7 @@ if(BUILD_QT)
 endif()
 
 if(3DS)
-	add_executable(${BINARY_NAME}.elf ${CMAKE_SOURCE_DIR}/src/platform/3ds/main.c)
+	add_executable(${BINARY_NAME}.elf ${GUI_SRC})
 	target_link_libraries(${BINARY_NAME}.elf ${BINARY_NAME} m ${OS_LIB})
 	add_custom_command(TARGET ${BINARY_NAME}.elf POST_BUILD COMMAND ${3DSXTOOL} ${BINARY_NAME}.elf ${BINARY_NAME}.3dsx)
 endif()
