--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -176,6 +176,12 @@ elseif(3DS)
 	include_directories(${CMAKE_BINARY_DIR})
 	list(APPEND OS_LIB sf2d ctru)
 	file(GLOB OS_SRC ${CMAKE_SOURCE_DIR}/src/platform/3ds/*.c ${CMAKE_BINARY_DIR}/font.c)
+	if(USE_VFS_3DS)
+		add_definitions(-DUSE_VFS_3DS)
+	else()
+		add_definitions(-DUSE_VFS_FILE)
+		list(APPEND VFS_SRC ${CMAKE_SOURCE_DIR}/src/util/vfs/vfs-file.c ${CMAKE_SOURCE_DIR}/src/util/vfs/vfs-dirent.c)
+	endif()
 	source_group("3DS-specific code" FILES ${OS_SRC})
 endif()
 
