3DS: Fix VDir3DS UTF-8 issues

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -183,6 +183,7 @@ elseif(3DS)
 	include_directories(${CMAKE_BINARY_DIR})
 	list(APPEND OS_LIB sf2d ctru)
 	file(GLOB OS_SRC ${CMAKE_SOURCE_DIR}/src/platform/3ds/*.c ${CMAKE_BINARY_DIR}/font.c)
+	set(USE_VFS_3DS ON)
 	if(USE_VFS_3DS)
 		add_definitions(-DUSE_VFS_3DS)
 	else()
