--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,7 +157,9 @@ elseif(3DS)
 	set(M_LIBRARY m)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-format")
 	add_definitions(-DCOLOR_16_BIT -DCOLOR_5_6_5)
-	execute_process(COMMAND ${RAW2C} ${CMAKE_SOURCE_DIR}/src/platform/3ds/font.raw)
+	if (${CMAKE_SOURCE_DIR}/src/platform/3ds/font.raw IS_NEWER_THAN ${CMAKE_BINARY_DIR}/font.c)
+		execute_process(COMMAND ${RAW2C} ${CMAKE_SOURCE_DIR}/src/platform/3ds/font.raw)
+	endif()
 	include_directories(${CMAKE_BINARY_DIR})
 	list(APPEND OS_LIB sf2d ctru)
 	file(GLOB OS_SRC ${CMAKE_SOURCE_DIR}/src/platform/3ds/*.c ${CMAKE_BINARY_DIR}/font.c)
@@ -193,7 +195,9 @@ endif()
 
 if(WII)
 	add_definitions(-U__STRICT_ANSI__)
-	execute_process(COMMAND ${RAW2C} ${CMAKE_SOURCE_DIR}/src/platform/wii/font.tpl OUTPUT_QUIET ERROR_QUIET)
+	if (${CMAKE_SOURCE_DIR}/src/platform/wii/font.tpl IS_NEWER_THAN ${CMAKE_BINARY_DIR}/font.c)
+		execute_process(COMMAND ${RAW2C} ${CMAKE_SOURCE_DIR}/src/platform/wii/font.tpl OUTPUT_QUIET ERROR_QUIET)
+	endif()
 endif()
 
 if(BUILD_RASPI)
