--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -286,7 +286,9 @@ if(BUILD_GLES2 AND NOT BUILD_RASPI)
 	endif()
 endif()
 find_feature(USE_FFMPEG "libavcodec;libavformat;libavresample;libavutil;libswscale")
-find_feature(USE_PNG "ZLIB;PNG")
+if(NOT PSP2)
+	find_feature(USE_PNG "ZLIB;PNG")
+endif()
 find_feature(USE_LIBZIP "libzip")
 find_feature(USE_MAGICK "MagickWand")
 
@@ -366,9 +368,11 @@ endif()
 
 if(USE_PNG)
 	list(APPEND FEATURES PNG)
-	include_directories(AFTER ${PNG_INCLUDE_DIRS})
-	list(APPEND DEPENDENCY_LIB ${PNG_LIBRARIES} ${ZLIB_LIBRARIES})
-	set(CPACK_DEBIAN_PACKAGE_DEPENDS "${CPACK_DEBIAN_PACKAGE_DEPENDS},libpng12-0,zlib1g")
+	if(NOT PSP2)
+		include_directories(AFTER ${PNG_INCLUDE_DIRS})
+		list(APPEND DEPENDENCY_LIB ${PNG_LIBRARIES} ${ZLIB_LIBRARIES})
+		set(CPACK_DEBIAN_PACKAGE_DEPENDS "${CPACK_DEBIAN_PACKAGE_DEPENDS},libpng12-0,zlib1g")
+	endif()
 endif()
 
 if(USE_LIBZIP)
