All: Fix some WANT_PNG build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,6 +148,7 @@ elseif(UNIX)
 	file(GLOB OS_SRC ${CMAKE_SOURCE_DIR}/src/platform/posix/*.c)
 	source_group("POSIX-specific code" FILES ${OS_SRC})
 elseif(WII)
+	set(M_LIBRARY m)
 	list(APPEND VFS_SRC ${CMAKE_SOURCE_DIR}/src/util/vfs/vfs-file.c ${CMAKE_SOURCE_DIR}/src/util/vfs/vfs-dirent.c)
 	add_definitions(-DCOLOR_16_BIT -DCOLOR_5_6_5 -DUSE_VFS_FILE)
 	include_directories(${CMAKE_BINARY_DIR})
@@ -397,6 +398,7 @@ if(WANT_PNG AND USE_ZLIB AND NOT USE_PNG)
 	set(PNG_STATIC ON CACHE BOOL "" FORCE)
 	set(PNG_SHARED OFF CACHE BOOL "" FORCE)
 	set(PNG_TESTS OFF CACHE BOOL "" FORCE)
+	set(SKIP_INSTALL_ALL ON)
 	set(CMAKE_C_FLAGS_RELEASE_OLD "${CMAKE_C_FLAGS_RELEASE}")
 	set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -fno-lto")
 	add_subdirectory(${CMAKE_SOURCE_DIR}/src/third-party/libpng libpng)
