Libretro: Fix build when features are enabled on the standalone

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -414,8 +414,9 @@ if (USE_LZMA)
 	list(APPEND FEATURES LZMA)
 endif()
 
+set(FEATURE_DEFINES)
 foreach(FEATURE IN LISTS FEATURES)
-	add_definitions("-DUSE_${FEATURE}")
+	list(APPEND FEATURE_DEFINES "USE_${FEATURE}")
 endforeach()
 
 source_group("Virtual files" FILES ${VFS_SRC})
@@ -465,10 +466,9 @@ endif()
 
 if(BUILD_SHARED)
 	add_library(${BINARY_NAME} SHARED ${SRC})
-	set_target_properties(${BINARY_NAME} PROPERTIES SOVERSION ${LIB_VERSION_ABI})
 	if(BUILD_STATIC)
 		add_library(${BINARY_NAME}-static STATIC ${SRC})
-		set_target_properties(${BINARY_NAME}-static PROPERTIES COMPILE_DEFINITIONS "${OS_DEFINES}")
+		set_target_properties(${BINARY_NAME}-static PROPERTIES COMPILE_DEFINITIONS "${OS_DEFINES};${FEATURE_DEFINES}")
 		install(TARGETS ${BINARY_NAME}-static DESTINATION ${LIBDIR} COMPONENT lib${BINARY_NAME})
 		add_dependencies(${BINARY_NAME}-static version-info)
 	endif()
@@ -477,6 +477,7 @@ else()
 endif()
 
 add_dependencies(${BINARY_NAME} version-info)
+set_target_properties(${BINARY_NAME} PROPERTIES VERSION ${LIB_VERSION_STRING} SOVERSION ${LIB_VERSION_ABI} COMPILE_DEFINITIONS "${OS_DEFINES};${FEATURE_DEFINES}")
 
 target_link_libraries(${BINARY_NAME} ${DEBUGGER_LIB} ${DEPENDENCY_LIB} ${OS_LIB})
 install(TARGETS ${BINARY_NAME} LIBRARY DESTINATION ${LIBDIR} COMPONENT lib${BINARY_NAME} NAMELINK_SKIP ARCHIVE DESTINATION ${LIBDIR} RUNTIME DESTINATION ${LIBDIR} COMPONENT lib${BINARY_NAME})
@@ -491,7 +492,6 @@ if(UNIX AND NOT APPLE)
 	install(FILES ${CMAKE_SOURCE_DIR}/res/mgba-256.png DESTINATION share/icons/hicolor/256x256/apps RENAME mgba.png COMPONENT lib${BINARY_NAME})
 	install(FILES ${CMAKE_SOURCE_DIR}/res/mgba-512.png DESTINATION share/icons/hicolor/512x512/apps RENAME mgba.png COMPONENT lib${BINARY_NAME})
 endif()
-set_target_properties(${BINARY_NAME} PROPERTIES VERSION ${LIB_VERSION_STRING} SOVERSION ${LIB_VERSION_ABI} COMPILE_DEFINITIONS "${OS_DEFINES}")
 
 if(BUILD_GL)
 	add_definitions(-DBUILD_GL)
